# torvall

./: .gitignore  .pre-commit-config.yaml  GNUmakefile  limine.conf
kernel/: .gitignore  Cargo.toml  GNUmakefile  README.md  build.rs  linker-x86_64.ld  torvall-x86_64-target.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/torvall_boot_protocol/: Cargo.toml  README.md
kernel/torvall_fmt/: Cargo.toml
kernel/torvall_fmt/src/: lib.rs
kernel/torvall_fmt/src/writers/: mod.rs  qemu_debug_port.rs
kernel/torvall_unsafe/: Cargo.toml  README.md
kernel/torvall_unsafe/src/: lib.rs
kernel/torvall_unsafe/src/arch/amd64/: io_port.rs  irq.rs  mod.rs
kernel/torvall_unsafe/src/ds/: ring_buffer.rs
